# Reticulum-Community-Hub

./: .coveragerc  .flake8  .gitignore  .pylintrc  AGENTS.md  Cargo.toml  DO_RCH_UPDATE_ON_DO.instructions.txt  PLANNING.md  README.md  TASK.md  TelemetryDocumentation.md  agent.md  build-electron.ps1  build-electron.sh  pyproject.toml  pytest.ini  rch-symbols.yaml  release_notes_2.6.2.md  release_notes_2.9.0.md  release_notes_2.9.1.md  release_notes_2.9.2.md  run_server.sh  run_server_ui.bat  run_server_ui.sh  run_server_ui_remote.sh  tasks-ui.md  test_hu_ui.bat  test_hub.bat  ui-architecture.md
.desloppify/: plan.json  query.json  review_packet_blind.json  state-python.json  state-python.json.bak
.github/workflows/: codex-auto-fix.yml  codex-issue-multi-agent.yml  electron-linux-appimage.yml  electron-macos.yml  electron-raspberrypi-arm64.yml  electron-release.yml  electron-windows.yml  lxmf-main-compatibility.yml  pylint.yml  python-app.yml  python-publish.yml  rust-pr-quality.yml  rust-release.yml  rust.yml
.tmp_internal_ws_smoke/: identity  lxmf-router.ini  rth_api.sqlite
API/: ReticulumCommunityHub-OAS.yaml  ReticulumTelemetryHub-OAS.yaml
RCH_Store/: config.ini  identity  rth_api.sqlite  rth_api.sqlite-shm  rth_api.sqlite-wal
RCH_Store/lxmf/: outbound_stamp_costs
apps/rch-desktop/: README.md  package-lock.json  package.json
apps/rch-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/rch-desktop/src-tauri/capabilities/: default.json
apps/rch-desktop/src-tauri/src/: main.rs
config/: lxmf-runtime-baseline.json  module-size-allowlist.txt  zmq-performance-baseline.json
crates/r3akt-identity/: Cargo.toml
crates/r3akt-node/: Cargo.toml
crates/r3akt-node/src/: lib.rs
crates/r3akt-node/tests/: rch_vertical.rs
crates/r3akt-profile-rch/: Cargo.toml
crates/r3akt-profile-rch/src/: fields.rs  lib.rs
crates/r3akt-protocol/: Cargo.toml
crates/r3akt-protocol/src/: lib.rs
crates/r3akt-rch-bridge/: Cargo.toml
crates/r3akt-rch-bridge/src/: lib.rs  main.rs
crates/r3akt-rch-core/: Cargo.toml
crates/r3akt-rch-core/migrations/: 0001_rch_core_snapshot.sql  0002_ordered_migrations.sql
crates/r3akt-rch-core/src/: lib.rs  python_migration.rs  rem_team_directory.rs  rem_team_scope.rs  text.rs
crates/r3akt-rch-core/src/tests/: rem_team_directory.rs
crates/r3akt-rch-server/: Cargo.toml
crates/r3akt-rch-server/src/: auth.rs  lib.rs  main.rs  rem_team_routing.rs  sar_seed.rs
crates/r3akt-rch-server/src/tests/: auth.rs  rem_team_directory.rs
crates/r3akt-rch-server/tests/: release_contract_matrix.rs  release_major_functionality.rs  sar_http_seeder.rs
crates/r3akt-router/: Cargo.toml
crates/r3akt-store/: Cargo.toml
crates/r3akt-store/src/: lib.rs
crates/r3akt-tak-connector/: Cargo.toml
crates/r3akt-tak-connector/src/: cot_time.rs  lib.rs  worker_timing.rs
crates/r3akt-transport-rns/: Cargo.toml
crates/r3akt-transport-rns/src/: actor_helpers.rs  lib.rs
crates/r3akt-transport-rns/src/tests/: rem_team_scope.rs
docs/: CosmicUi.md  CosmicUiManualQa.MissionsWave1.md  CosmicUiManualQa.MissionsWave5.md  CosmicUiManualQa.md  InternalAPIIncrementalImplementationtasks.md  Manifesto_Reticulum_Community_Hub.md  README.md  TelemetryDocumentation.md  UI-design  architecture.md  dataArchitecture.md  example_telemetry.json  examples-endpoint.txt  examples.md  internal-api-examples.md  internal-api-overview.md  internal-api.md  operations-and-troubleshooting.md  performance-stress-report.md  r3akt_roadmap.md  release-contract-matrix.json  release-live-stress-report.md  release-notes-v3.0.0-preview.0.md  release-notes-v3.0.0-preview.2.md  release-notes-v3.0.0-preview.4.md  release-notes-v3.0.0-preview.5.md  release-notes-v3.0.0-preview.7.md  release-notes-v3.0.0-preview.8.md  release-notes-v3.0.0-preview.9.md  release-parity-report.md  release-readiness-audit.md  rem-southbound-interface.md  remoteAccess.md  rust-migration-status.md  rust-transition.md  rust_runtime_parity_audit.md  southbound.md  stabilization-v3.0.0-preview.9.md  supportedCommands.md  tak.md  (+7 more)
docs/architecture/: LXMFfields.md  R3AKT_Domain_Class_Diagram.mmd  architecture.md  contract-mapping.md  extensionArchitecture.md  reticulum-adapter-mapping.md  ui-architecture.md
docs/plans/: CosmicUiManualQa.MissionsWave2.md  CosmicUiManualQa.MissionsWave3.md  (+7 more)
electron/: README.md  package-lock.json  package.json  tsconfig.json
examples/rch-ingest-sim/: Cargo.toml
examples/rch-ingest-sim/src/: main.rs
packaging/: README.md
reticulum_telemetry_hub/: lxmf_runtime.py  message_delivery.py
scripts/: build-rust-release-package.ps1  check-doc-links.ps1  check-rust-module-size.ps1  import-python-rch-production.Tests.ps1  import-python-rch-production.ps1  local-reticulum-live-gate.ps1  migrate-python-rch.ps1  python-rust-parity.ps1  rch-speed-test.ps1  release-readiness.ps1  zmq-performance-gate.ps1
tests/: conftest.py  factories.py  fts_pytak_COTTest.py  fts_pytak_ConnectionTest.py  test_announce_handler.py  test_api_models.py  test_atak_cot.py  test_battery_sensor.py  test_chat_messages.py  test_client.py  test_client_behaviour.py  test_command_manager.py  test_command_manager_files_and_images.py  test_command_manager_subscribers.py  test_config_models.py  test_config_paths.py  test_coverage.py  test_embedded_lxmd.py  test_escape_prefixed_commands.py  test_event_log_listeners.py  test_event_log_shared.py  test_file_api.py  test_lxmf_peer.py  test_lxmf_runtime.py  test_lxmf_telemetry.py  test_message_delivery.py  test_mission_delta_markdown.py  test_outbound_queue.py  test_pytak_client.py  test_release_consistency.py  test_rem_checklist_commands.py  test_reticulum_server_daemon.py  test_reticulum_server_services.py  test_rth_api.py  test_tak_connector.py  test_telemeter_manager.py  test_telemetry_sampler.py
ui/: .eslintrc.cjs  .tmp-backend.err  .tmp-playwright-checklist.csv  .tmp-playwright-startup.md  .tmp-vue-tsc.txt  IMPLEMENTATION_PLAN.md  README.md  index.html  mdi-svg-7.4.47.tgz  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
(+588 files in other folders)
