[workspace]
members = [
    "crates/r3akt-protocol",
    "crates/r3akt-profile-rch",
    "crates/r3akt-rch-core",
    "crates/r3akt-rch-server",
    "crates/r3akt-rch-bridge",
    "crates/r3akt-tak-connector",
    "crates/r3akt-transport-rns",
]
exclude = [
    "apps/rch-desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "EPL-2.0"
repository = "https://github.com/FreeTAKTeam/Reticulum-Community-Hub"

[workspace.dependencies]
r3akt-protocol = { path = "crates/r3akt-protocol" }
r3akt-profile-rch = { path = "crates/r3akt-profile-rch" }
r3akt-rch-bridge = { path = "crates/r3akt-rch-bridge" }
r3akt-rch-core = { path = "crates/r3akt-rch-core" }
r3akt-rch-server = { path = "crates/r3akt-rch-server" }
r3akt-tak-connector = { path = "crates/r3akt-tak-connector" }
r3akt-transport-rns = { path = "crates/r3akt-transport-rns" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rns-core = { package = "reticulum-rs-core", version = "=0.8.0" }
base64 = "0.22"
axum = { version = "0.8", features = ["ws", "multipart"] }
csv = "1.3"
futures-util = "0.3"
http-body-util = "0.1"
native-tls = "0.2"
prost = "0.14"
quick-xml = "0.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rmp-serde = "1.3"
rusqlite = { version = "0.37", features = ["bundled", "backup"] }
thiserror = "2.0"
time = { version = "0.3.45", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1.8", features = ["serde", "v4", "v7"] }
zeromq = { version = "0.6.0", default-features = false, features = ["tokio-runtime", "tcp-transport"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
