[tool.poetry]
name = "ReticulumTelemetryHub"
version = "0.21.0"
description = "Reticulum-Telemetry-Hub (RTH) manages a complete TCP node across a Reticulum-based network, enabling communication and data sharing between clients like Sideband or Meshchat."
authors = ["naman108, corvo"]
readme = "README.md"
packages = [
    { include = "reticulum_telemetry_hub" },
]

[tool.poetry.dependencies]
python = "^3.10"
lxmf = "^0.9.2"
rns = "^1.0.2"
msgpack = "^1.0.8"
sqlalchemy = "^2.0.32"
pytest = "^8.3.2"
pytest-cov = "^6.1"
cryptography = "^46.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
