[package]
name = "r3akt-profile-rch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
r3akt-protocol.workspace = true
rmp-serde.workspace = true
rmpv = { version = "1.3", features = ["with-serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
