[package]
name = "r3akt-rch-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
csv.workspace = true
r3akt-profile-rch.workspace = true
r3akt-protocol.workspace = true
rmp-serde.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
