[package]
name = "r3akt-tak-connector"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
native-tls.workspace = true
prost.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
base64.workspace = true

[lints]
workspace = true
