[package]
name = "r3akt-transport-rns"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
lxmf = { package = "lxmf-wire", path = "../../../LXMF-rs/crates/libs/lxmf-core", version = "0.2.0", default-features = false, features = ["std"] }
r3akt-protocol.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
