[package]
name = "r3akt-transport-rns"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
lxmf = { package = "lxmf-wire", path = "../../../LXMF-rs/crates/libs/lxmf-core", version = ">=0.6.0, <0.7.0", default-features = false, features = ["std"] }
lxmf-sdk = { path = "../../../LXMF-rs/crates/libs/lxmf-sdk", version = ">=0.6.0, <0.7.0", default-features = false, features = ["zmq-pipeline-backend"] }
r3akt-protocol.workspace = true
rns-rpc = { package = "reticulum-rs-rpc", path = "../../../LXMF-rs/crates/libs/rns-rpc", version = ">=0.6.0, <0.7.0" }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeromq.workspace = true

[dev-dependencies]

[lints]
workspace = true
