[package]
name = "r3akt-transport-rns"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
lxmf = { package = "lxmf-wire", version = "=0.9.5", default-features = false, features = ["std"] }
lxmf-sdk = { version = "=0.9.5", default-features = false, features = ["zmq-pipeline-backend"] }
r3akt-protocol.workspace = true
rns-rpc = { package = "reticulum-rs-rpc", version = "=0.9.5" }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeromq.workspace = true

[dev-dependencies]

[lints]
workspace = true
