[package]
name = "rch-desktop"
version = "3.0.0-preview.7"
edition = "2024"
rust-version = "1.85"
license = "EPL-2.0"
repository = "https://github.com/FreeTAKTeam/Reticulum-Community-Hub"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
